# reactive-trading-sim

./: .gitignore  DEBUGGING_JOURNEY.md  LICENSE  Makefile  README.md  STATUS.md  dune-project  main.ml  reactive_trading_sim.opam  run_tests.sh  simulation.json
docs/: BENCHMARK_TESTING.md  INTEGRATION_TESTING.md  SCENARIO_TESTING.md  STRESS_TESTING.md  TESTING_GUIDE.md
src/: agents.ml  dune  main.ml  order_book.ml  risk.ml  simulation.ml  types.ml
test/: dune  test_agents.ml  test_integration.ml  test_order_book.ml
